--- a/app/src/main/res/layout/activity_beschleunigung.xml
+++ b/app/src/main/res/layout/activity_beschleunigung.xml
@@ -115,6 +115,20 @@
                 android:id="@+id/resetX"
                 />
 
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:text="10 Min"
+                android:textSize="10sp"
+                android:textColor="@color/background"
+                android:backgroundTint="@color/button"
+                android:id="@+id/btn_x_10min"
+                android:layout_marginStart="5dp"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
+
         </LinearLayout>
 
         <com.github.mikephil.charting.charts.LineChart
@@ -178,6 +192,20 @@
                 android:id="@+id/resetY"
                 />
 
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:text="10 Min"
+                android:textSize="10sp"
+                android:textColor="@color/background"
+                android:backgroundTint="@color/button"
+                android:id="@+id/btn_y_10min"
+                android:layout_marginStart="5dp"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
+
         </LinearLayout>
 
         <com.github.mikephil.charting.charts.LineChart
@@ -240,6 +268,20 @@
                 android:paddingTop="3dp"
                 android:id="@+id/resetZ"
                 />
+
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:text="10 Min"
+                android:textSize="10sp"
+                android:textColor="@color/background"
+                android:backgroundTint="@color/button"
+                android:id="@+id/btn_z_10min"
+                android:layout_marginStart="5dp"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"/>
 
         </LinearLayout>
 
