--- a/app/src/main/res/layout/activity_ereignisse_graph.xml
+++ b/app/src/main/res/layout/activity_ereignisse_graph.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/background"
-    tools:context=".MainActivity">
+    tools:context=".main.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
